market analysis - fixed early wrapping of totals

--- a/css/pages/market-analysis.scss
+++ b/css/pages/market-analysis.scss
@@ -732,7 +732,10 @@
                 &--totals {
                     grid-column: unset;
                     width: 100%;
-                    padding-right: 40px;
+
+                    @include desktop-sm-min {
+                        padding-right: 40px;
+                    }
                 }
             }
 
